# teddy

./: .gitignore  CMakeLists.txt  Makefile  README.md  notes.md  todo.md
src/: buffer.cpp  buffer.hpp  editor.cpp  editor.hpp  main.cpp  md_parser.cpp  md_parser.hpp  md_render.cpp  md_render.hpp  syntax.cpp  syntax.hpp  terminal.cpp  terminal.hpp
